fix calendar on mobile in filter

--- a/src/sass/global/_circles.scss
+++ b/src/sass/global/_circles.scss
@@ -26,6 +26,9 @@
 		justify-content: center;
 		border-radius: 50%;
 		overflow: hidden;
+		&:hover{
+			text-decoration: none;
+		}
 		&-title{
 			position: relative;
 			z-index: 15;
